[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moon_gen"
version = "0.0.1"
authors = [
  { name="mbiselx"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyqtgraph",
    "numpy"
]