[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moon_gen"
version = "0.0.2"
authors = [
  { name="mbiselx"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: None",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0", 
    "scipy",
    "pyopengl",
    "PyQt6",
    "pyqtgraph",
]

[project.optional-dependencies]
test = [
    "autopep8",
    "flake8",
    "pytest"
]